--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.1/simple-lightbox.min.css"/>
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
+    <p><a href="index.html"></a></p>
 
     <!-- Add gallery items to this list -->
     <ul class="gallery"></ul>
